# cocotbext-pcie

./: README.md  setup.cfg  setup.py
.github/workflows/: regression-tests.yml
cocotbext/pcie/: __init__.py  bridge.py  caps.py  device.py  endpoint.py  function.py  port.py  rc.py  switch.py  tlp.py  utils.py
cocotbext/pcie/core/: __init__.py  bridge.py  caps.py  device.py  dllp.py  endpoint.py  function.py  msi.py  pci.py  port.py  rc.py  region.py  switch.py  tlp.py  utils.py
cocotbext/pcie/core/caps/: __init__.py  aer.py  common.py  msi.py  pcie.py  pm.py
cocotbext/pcie/intel/ptile/: __init__.py  interface.py  ptile_model.py
cocotbext/pcie/intel/s10/: __init__.py  interface.py  s10_model.py
cocotbext/pcie/xilinx/us/: __init__.py  interface.py  tlp.py  us_model.py  usp_model.py
tests/pcie/: Makefile  pcie.v  test_pcie.py  test_pcie.v
tests/pcie_ptile/: Makefile  test_pcie_ptile.py  test_pcie_ptile.v
tests/pcie_s10/: Makefile  test_pcie_s10.py  test_pcie_s10.v
tests/pcie_us/: Makefile  test_pcie_us.py  test_pcie_us.v
tests/pcie_usp/: Makefile  test_pcie_usp.py  test_pcie_usp.v
