# package information
[metadata]
name = cocotbext-pcie
version = attr: cocotbext.pcie.core.version.__version__
description = PCI express simulation framework for cocotb
keywords = pcie, cocotb
author = Alex Forencich
author_email = alex@alexforencich.com
license = MIT
url = https://github.com/alexforencich/cocotbext-pcie
project_urls =
    Bug Tracker = https://github.com/alexforencich/cocotbext-pcie/issues
    Source Code = https://github.com/alexforencich/cocotbext-pcie
download_url = https://github.com/alexforencich/cocotbext-pcie/tarball/master
long_description = file: README.md
long-description-content-type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb
    cocotbext-axi

[options.extras_require]
test =
    pytest
    cocotb-test

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib

# tox configuration
[tox:tox]
envlist = py36, py37, py38, py39

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
setenv =
    COVERAGE=1

deps =
    pytest
    pytest-xdist
    cocotb-test
    coverage
    pytest-cov

commands =
    pytest --cov=cocotbext --cov=tests --cov-branch -n auto
    bash -c 'find . -type f -name "\.coverage" | xargs coverage combine --append'

whitelist_externals =
    bash

# combine if paths are different
[coverage:paths]
source =
    cocotbext/
    /*/cocotbext

# do not report dependencies
[coverage:report]
omit = 
   .tox/*
