# package information
[metadata]
name = cocotbext-pcie
version = attr: cocotbext.pcie.core.version.__version__
description = PCI express simulation framework for cocotb
keywords = pcie, cocotb
author = Alex Forencich
author_email = alex@alexforencich.com
license = MIT
url = https://github.com/alexforencich/cocotbext-pcie
project_urls =
    Bug Tracker = https://github.com/alexforencich/cocotbext-pcie/issues
    Source Code = https://github.com/alexforencich/cocotbext-pcie
download_url = https://github.com/alexforencich/cocotbext-pcie/tarball/master
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Framework :: cocotb
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    cocotb >= 1.6.0
    cocotbext-axi >= 0.1.16

[options.extras_require]
test =
    pytest
    cocotb-test

[options.packages.find]
include = cocotbext.*

# pytest configuration
[tool:pytest]
testpaths =
    tests
addopts =
    --import-mode importlib

# tox configuration
[tox:tox]
envlist = py37, py38, py39, py310
skip_missing_interpreters = true
minversion = 3.18.0
requires = virtualenv >= 16.1

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
setenv =
    COVERAGE=1
usedevelop = True

deps =
    pytest == 7.2.1
    pytest-xdist == 3.1.0
    cocotb == 1.7.2
    cocotb-bus == 0.2.1
    cocotb-test == 0.2.4
    cocotbext-axi == 0.1.20
    coverage == 7.0.5
    pytest-cov == 4.0.0

commands =
    pytest --cov=cocotbext --cov=tests --cov-branch {posargs:-n auto --verbose}
    bash -c 'find . -type f -name "\.coverage" | xargs coverage combine --append'
    coverage report

allowlist_externals =
    bash

# combine if paths are different
[coverage:paths]
source =
    cocotbext/
    /*/cocotbext

# do not report dependencies
[coverage:report]
omit = 
   .tox/*
